[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/textures/enemies/weird_squid.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemies/Squid.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/effects/cloud_edit.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/cloud.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/cloud2.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/ui/HealthBar.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=8]
resource_name = "Float"
length = 2.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 11 )

[sub_resource type="Animation" id=6]
resource_name = "Fart"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 0.85, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attacks/Fart/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.75, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attacks/Fart/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.75, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Attacks/Fart/Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.75, 0.85 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Attacks/Fart/Sprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.75, 0.85, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.27451, 0.431373, 0.568627, 0 ), Color( 0.27451, 0.431373, 0.568627, 1 ), Color( 0.27451, 0.431373, 0.568627, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Audio/CloudSmall:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.75 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("UI/Label:text")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Uh-ohh", "" ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.35, 0.55, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ), Vector2( 2, 3 ), Vector2( -2, 3 ), Vector2( 2, 3 ), Vector2( 0, 3 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Fated_fart"

[sub_resource type="CapsuleShape2D" id=5]
radius = 48.0
height = 60.6667

[sub_resource type="CircleShape2D" id=3]
radius = 100.0

[sub_resource type="Animation" id=2]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Squid" type="KinematicBody2D" groups=["entities"]]
scale = Vector2( 1.5, 1.5 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Float = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 3 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Attacks" type="Node2D" parent="."]

[node name="Player" type="AnimationPlayer" parent="Attacks"]
root_node = NodePath("../..")
anims/Fart = SubResource( 6 )
anims/Fated_fart = SubResource( 7 )

[node name="Fart" type="Area2D" parent="Attacks"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacks/Fart"]
rotation = 1.5708
shape = SubResource( 5 )
disabled = true

[node name="Sprite" type="Sprite" parent="Attacks/Fart"]
visible = false
modulate = Color( 0.27451, 0.431373, 0.568627, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Timers" type="Node" parent="."]

[node name="Behaviour" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="Audio" type="Node" parent="."]

[node name="CloudBig" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 4 )

[node name="CloudSmall" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 5 )

[node name="Detection" type="Area2D" parent="."]
visible = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 3 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="UI"]
margin_left = -10.6667
margin_top = -32.0
margin_right = 29.3333
margin_bottom = -18.0

[node name="HealthBar" parent="UI" instance=ExtResource( 6 )]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = -21.3333
margin_top = 16.0
margin_right = 42.6667
margin_bottom = 28.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/HealthBar"]
root_node = NodePath("../../..")
anims/Hit = SubResource( 2 )

[connection signal="body_entered" from="Attacks/Fart" to="." method="_on_Fart_body_entered"]
[connection signal="timeout" from="Timers/Behaviour" to="." method="_on_Behaviour_timeout"]
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
